  00000000 | T | Refactor all the classes (separate db concerns, and service logic from object logic)
  00000000 | T | Filter prizes by due date and stock
  00000000 | T | On prize creation check due_date >= set_date
  00000000 | T | Change administrator password, or allow it to be changed from UI
  00000000 | T | cancelHandOverPrize() on backend
  00000000 | T | improve the error handling
v2.1.0
  20170823 | P | Working to pass props to components on routes
  20170823 | P | Added add user functionality for administrators
  20170822 | P | Improved Drawer header UI
  20170822 | P | Added FAB for adding users functionality
  20170822 | P | Added password reset functionality for administrators
  20170822 | P | Added edit and delete options to Users
  20170818 | P | Added basic Users section
  20170818 | P | Added react-router v4
  20170818 | P | Added v2-router for /v2/* routes
  20170818 | P | Added working login/logout functionality
v2.0.0
  20170816 | P | Solved comunication with server
  20170816 | P | Started front end rewrite on React
v0.7.1
  #Deployed
  20170217 | F4 | the problem was the total un-implementation of the total_handed attribute :\
  20170217 | B4 | when updateing prizes data from periodic to stock total_handed gets null 
  20170217 | F3 | it was a wider problem, missing "this" reference when calling Prize.update() 
  20170217 | B3 | granting periodic prizes is not working
  20170217 | F2 | the methods findAll() and findOne() weren't geting they reference of Winner through winnerBinder()
  20170215 | B2 | new Winner() is getting undefined at values (winners.js:5:14)
  20170215 | R | winners.js to be testable
  20170214 | P | Started to unit test winners.js
  20170214 | R | Winner class to use this keyword
  20170214 | F1 | Return statement missing on Prize.stockIncrease() and Prize.stockDecrease()
  20170213 | B1 | Error at handling periodic prizes, somehow it finds that stock is not enough