@@ -13,6 +13,7 @@ html{
 }
 
 @import './drawer/Drawer';
+@import './users/Users';
 
 .app-routes{
   overflow-y: auto;
