@@ -2,7 +2,6 @@ import React, { Component } from 'react';
 
 class Home extends Component {
  render() {
-   console.log(this.props)
    return (
      <div>
        Home Component
