@@ -1,0 +1,7 @@
+.users-item{
+
+  .users-item-link{
+    text-decoration: none;
+    color: $accent-color;
+  }
+}
